Cleaningup (#103)
This update replaces the Guice dependency with manual dependency injection for improved flexibility. Key new features include checksum validation, a new "collection mode", and optimized asynchronous processing with progress tracking. The release also enhances logging, updates build scripts for native binaries, and revises GitHub workflows.